<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.tb.flags"
    android:background="@drawable/bg_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <Button
        android:onClick="onBtnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip"
        android:textSize="24sp"
        android:id="@+id/btnNewGame"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game"
        style="@style/MainButton"></Button>
    <Button
        android:text="@string/cont"
        android:id="@+id/btnContinue"
        android:visibility="gone"
        android:onClick="onBtnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_below="@+id/btnNewGame"
        style="@style/MainButton"
        android:layout_marginTop="14dip"></Button>


    <Button
        android:text="@string/high_scores"
        android:id="@+id/btnHighScores"
        android:onClick="onBtnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        android:layout_below="@+id/btnNewGame"
        style="@style/MainButton"
        android:layout_marginTop="40dip"
        android:layout_marginLeft="30dip"></Button>

    <Button
        android:text="@string/ranking"
        android:id="@+id/btnHighScoresScoreloop"
        android:onClick="onBtnClick"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnNewGame"
        android:layout_marginTop="40dip"
        android:layout_marginRight="30dip"></Button>


    <ToggleButton
        android:text="@string/sound"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dip"
        style="@style/SoundButton"
        android:id="@+id/tbSoundOnOff"
        android:onClick="onBtnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"></ToggleButton>
    <!--
        <com.admob.android.ads.AdView android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        myapp:backgroundColor="#000000" myapp:primaryTextColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        myapp:secondaryTextColor="#CCCCCC" />
    -->
</RelativeLayout>
