<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.tb.flags"
    android:background="@drawable/bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/lblHighScores"
        android:text="@string/high_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />
    <Button
        android:text=""
        android:id="@+id/btnResetHighScore"
        android:onClick="onBtnClick"
        style="@style/ClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dip"
        android:layout_marginLeft="6dip"></Button>
    <Button
        android:text=""
        android:id="@+id/btnSendHighScore"
        android:onClick="onBtnClick"
        style="@style/SendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dip"
        android:layout_marginRight="6dip"></Button>
    <ImageView
        android:id="@+id/ivLine"
        android:src="@drawable/line"
        android:layout_margin="2dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblHighScores"
        android:layout_width="fill_parent"></ImageView>
    <ListView
        android:id="@+id/scores_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLine"
        android:layout_marginBottom="54dip"
        android:cacheColorHint="#00000000">
    </ListView>
    <TextView
        android:id="@+id/no_high_scores"
        android:textSize="24sp"
        android:text="@string/no_high_scores"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_centerInParent="true" />
        <!-- 
    <com.admob.android.ads.AdView
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        myapp:backgroundColor="#000000"
        myapp:primaryTextColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        myapp:secondaryTextColor="#CCCCCC" /> -->
    <Button
        android:text="@string/new_game"
        android:id="@+id/btnNewGame"
        android:onClick="onBtnClick"
        style="@style/MainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dip"
        android:layout_marginRight="4dip"></Button>
</RelativeLayout>
